--- a/63816-h/63816-h.htm
+++ b/63816-h/63816-h.htm
@@ -67,7 +67,7 @@ table {margin-top:2%;margin-bottom:2%;margin-left:auto;margin-right:auto;border:
   </head>
 <body>
 <pre style='margin-bottom:6em;'>The Project Gutenberg EBook of La vuelta al mundo de un novelista; vol.
-2/3, by Vincente Blasco Ibáñez
+2/3, by Vicente Blasco Ibáñez
 
 This eBook is for the use of anyone anywhere in the United States and
 most other parts of the world at no cost and with almost no restrictions
@@ -79,7 +79,7 @@ using this ebook.
 
 Title: La vuelta al mundo de un novelista; vol. 2/3
 
-Author: Vincente Blasco Ibáñez
+Author: Vicente Blasco Ibáñez
 
 Release Date: November 20, 2020 [EBook #63816]
 
